# ahin

./: .gitignore  ARMOPT.md  CREDITS.md  FUTURE.md  README.md  USAGE.md  commands.txt  download_models.py  get_vocab.py  main.py  main_onnx.py  pyproject.toml
ahin/: asr.py  config.py  core.py  tts.py  vad.py  vad_fast.py  voice_assistant.py  voice_assistant_fast.py  voice_assistant_faster.py
ahin/strats/: command.py  conversation_b.py  conversational.py  default.py  fallback.py  llm.py  router.py
