[project]
name = "ahin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.2.14",
    "onnxruntime>=1.24.1",
    "pywhispercpp[examples]>=1.4.1",
    "sherpa-onnx>=1.12.24",
    "sherpa-onnx-bin>=1.12.24",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "thundersvm-cpu>=0.3.3",
    "tokenizers>=0.22.2",
]
