[project]
name = "ahin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctranslate2>=4.7.1",
    "faster-whisper>=1.2.1",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.1",
    "openai>=2.21.0",
    "piper-onnx>=1.0.6",
    "python-dotenv>=1.2.1",
    "pywhispercpp[examples]>=1.4.1",
    "setuptools==80",
    "sherpa-onnx>=1.12.24",
    "sherpa-onnx-bin>=1.12.24",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "tokenizers>=0.22.2",
    "webrtcvad>=2.0.10",
]
